package gu.java.pattern.structure.flyweight;

/**
 * Interface for Potions.
 * 药剂
 */
public interface Potion {
    void drink();
}
