package gu.java.pattern.structure.flyweight;

/**
 * 
 * Enumeration for potion types.
 *
 */
public enum PotionType {

  HEALING, INVISIBILITY, STRENGTH, HOLY_WATER, POISON
}